# base64-no-upper-case-py

./: .gitignore  DEV.md  MANIFEST.in  README.md  pyproject.toml  test.py
.github/workflows/: publish.yml  test.yml
src/base64NoUpperCase/: __init__.py
tests/: test_init.py
