[project]
name = "base64-no-upper-case"
version = "2.0.2"
authors = [{ name = "bddjr" }]
description = "Base64, but no UPPER CASE."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Unlicense"
license-files = ["LICEN[CS]E*"]
keywords = [
    "base64",
    "base",
    "scratch",
    "upper",
    "lower",
    "case",
    "uppercase",
    "lowercase",
    "encode",
    "decode",
    "atob",
    "btoa",
]

[project.urls]
Source = "https://github.com/bddjr/base64-no-upper-case-py"

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
pythonpath = ["src"]
